portal container card layout issue

--- a/web/studio/css/main.css
+++ b/web/studio/css/main.css
@@ -1463,6 +1463,7 @@ input[type=checkbox] {
     padding-left: 15px;
     position: relative;
     min-height: 1px;
+    float: left;
 }
 
 
